--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx tailwindcss -i ./src/css/tailwind.css -o ./dist/output.css --watch"
+    "watch": "npx tailwindcss -i ./src/css/tailwind.css -o ./dist/output.css --watch",
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0"
   }
 }
