--- a/package.json
+++ b/package.json
@@ -5,17 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx tailwindcss -i ./src/css/tailwind.css -o ./dist/output.css --watch"
+    "watch": "npx tailwindcss -i src/styles.css -o ./dist/output.css --watch",
+    "start": "webpack serve --mode=development --open",
+    "build": "export NODE_ENV=production && webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^7.8.3",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "firebase": "^9.15.0",
-    "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0"
   }
 }
